ian pseudocode session

--- a/index.html
+++ b/index.html
@@ -14,42 +14,11 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                Column
-            </div>
-            <div class="col">
-                Column
-            </div>
-            <div class="col">
-                Column
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                Column
-            </div>
-            <div class="col">
-                Column
-            </div>
-            <div class="col">
-                Column
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                Column
-            </div>
-            <div class="col">
-                Column
-            </div>
-            <div class="col">
-                Column
-            </div>
-        </div>
-    </div>
+    <h1 class="text-center">Tic-Tac-Toe</h1>
 
+    
+
+    <!-- reset game button here -->
 
     <script src="./js/main.js"></script>
 </body>
