--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 </head>
 
 <body>
-    <h1 class="text-center">Tic-Tac-Toe</h1>
+    <header>
+        <h1 class="text-center">Tic-Tac-Toe</h1>
+    </header>
 
     <div id="app"></div>
 
-    <button type="button" class="btn btn-info">Restart Game</button>
+    <div class="d-grid gap-2 col-2 mx-auto">
+        <button class="btn btn-primary" type="button">Restart Game</button>
+    </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
