made grid look right

--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
         <h1 class="text-center">Tic-Tac-Toe</h1>
     </header>
 
-    <div id="app"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div id="app"></div>
+            </div>
+        </div>
+    </div>
+
+    <br>
 
     <div class="d-grid gap-2 col-2 mx-auto">
         <button class="btn btn-primary" type="button">Restart Game</button>
