--- a/index.html
+++ b/index.html
@@ -24,16 +24,21 @@
                 <div id="app"></div>
             </div>
         </div>
+        <br>
+        <div class="row">
+            <div class="col">
+                <div class="d-grid gap-2 col-4 mx-auto">
+                    <button class="btn btn-primary" type="button">Restart Game</button>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <br>
-
-    <div class="d-grid gap-2 col-2 mx-auto">
-        <button class="btn btn-primary" type="button">Restart Game</button>
-    </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
 
     <script src="./js/main.js"></script>
 </body>
