player turn text

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
     <div class="container">
         <div class="row">
+            <div class="col text-center fs-3" id="playerTurn">
+                Whose turn is it?
+            </div>
+        </div>
+        <div class="row">
             <div class="col">
                 <div id="app"></div>
             </div>
