x and o on board alternating no double clicking

--- a/index.html
+++ b/index.html
@@ -19,17 +19,21 @@
     </header>
 
     <div class="container">
+        
         <div class="row">
             <div class="col text-center fs-3" id="playerTurn">
-                Whose turn is it?
+                It's player X's turn.
             </div>
         </div>
+
         <div class="row">
             <div class="col">
                 <div id="app"></div>
             </div>
         </div>
+
         <br>
+        
         <div class="row">
             <div class="col">
                 <div class="d-grid gap-2 col-4 mx-auto">
@@ -37,6 +41,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 
 
