--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <div class="container">
-        
+
         <div class="row">
             <div class="col text-center fs-3" id="playerTurn">
                 It's player X's turn.
@@ -37,7 +37,7 @@
         <div class="row">
             <div class="col">
                 <div class="d-grid gap-2 col-4 mx-auto">
-                    <button class="btn btn-primary" type="button">Restart Game</button>
+                    <button class="btn btn-primary" type="button" id="restartBtn">Restart Game</button>
                 </div>
             </div>
         </div>
