--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
 
 <body>
     <header>
-        <h1 class="text-center">Tic-Tac-Toe</h1>
+        <h1 class="text-center display-2 fw-bold">
+            TIC-T<img src="./img/AMBlackXLTrans.jpg" alt="Andrew Mills Logo" height="65vh" style="padding-bottom:1vh;">C-TOE
+        </h1>
     </header>
 
     <div class="container">
 
-        <div class="row">
+        <div class="row-1">
             <div class="col text-center fs-3" id="playerTurn">
-                It's player X's turn.
+                It's Player X's turn.
             </div>
         </div>
 
-        <div class="row">
+        <div class="row-9">
             <div class="col">
                 <div id="app"></div>
             </div>
@@ -34,11 +36,23 @@
 
         <br>
         
-        <div class="row">
+        <div class="row-1">
             <div class="col">
                 <div class="d-grid gap-2 col-4 mx-auto">
-                    <button class="btn btn-primary" type="button" id="restartBtn">Restart Game</button>
+                    <button class="btn btn-dark fw-bolder" type="button" id="restartBtn">RESTART GAME</button>
                 </div>
+            </div>
+        </div>
+
+        <br>
+        <br>
+
+        <div class="row-1">
+            <div class="col text-center">
+                <a class="navbar-brand fs-6 text-black">
+                    <img src="./img/AMBlackXLTrans.jpg" alt="Andrew Mills Logo" width="30" height="24">
+                    Developed by Andrew Mills, 2021.
+                </a>
             </div>
         </div>
 
